# AiCoding

project01/: index.html  package-lock.json  package.json
project02/: 核心模块实现说明.md
project03/: jest.config.js  package-lock.json  package.json  payment.db
project04/: console_reporter.py  git_analyzer.py  html_reporter.py  main.py  requirements.txt  test_report.html
project05/: enums.py  library_widget.py  lyrics_widget.py  main.py  metadata_reader.py  music_player.py  player_widget.py  playlist_widget.py  requirements.txt  song.py  test_scan.py
project06/: app.py  data_generator.py  recommendation.py  requirements.txt  rfm_analysis.py  test_modules.py
project07/: resource_monitor.py
project08/: index.html  main.js  style.css
project09/: app.py  app_advanced.py  app_improved.py  app_opt_v2.py  app_simple.py  requirements.txt
project10/: card_game.py
project11/: add_sample_data.py  requirements.txt  run.py
project12/: jest.config.js  package-lock.json  package.json  tsconfig.json
project13/: app.js  index.html  style.css
project14/: package-lock.json  package.json  webpack.config.js
project15/: app.js  index.html
project16/: package.json
project17/: game.js  index.html  simple-game.html  test.html
project18/: diff_viewer.py  editor.py  main.py  preview.py  rrr.md  search_replace.py  settings.py  spell_checker.py  (+2 more)
project25/backend/: pyproject.toml  requirements.txt  run.py
project25/backend/app/: simulation_service.py
project29/: TEST_GUIDE.md  TEST_SPECIFICATION.md  pyproject.toml  run_tests.py  verify_module.py
project29/src/: __init__.py  financial_reconciliation.py
project29/tests/: conftest.py  test_advanced.py  test_boundary.py  test_data_scenarios.py  test_error_handling.py  test_unit.py
project29/tests/golden_files/: boundary_cross_year_month.json  boundary_empty_bills.json  boundary_negative_amount.json  boundary_single_record.json  boundary_zero_amount.json  data_amount_mismatch.json  data_date_mismatch.json  data_duplicate_entries.json  data_normal_reconciliation.json  error_column_mismatch.json  error_encoding.json  error_invalid_data.json  error_messages_actionable.json  error_missing_fields.json  unit_decimal_precision.json  unit_exchange_rate.json
(+957 files in other folders)
